update files sass and css

--- a/css/estilos.sass
+++ b/css/estilos.sass
@@ -1,5 +1,5 @@
-/*  Diseño "Lab/Crea" 1.0 by Alexander Celis - @d0nCelis
-/* Licencia - Creative Commons (CC) - Permitido con fines educativos
+//  Diseño "Lab/Crea" 1.0 by Alexander Celis - @d0nCelis
+// Licencia - Creative Commons (CC) - Permitido con fines educativos
 
 $base-color: rgb(185, 83, 86)
 $back-colorO: rgb(38, 41, 46)
@@ -27,7 +27,7 @@ body
 	>div
 		visibility: hidden
 
-/*-- Slider --
+//-- Slider --
 .diapositivas
 	width: 100%
 	color: white
@@ -76,7 +76,7 @@ body
 	background: transparent
 	color:  $base-color
 
-/*-- Inicio --
+//-- Inicio --
 .inicio
 	background: $back-colorC
 	color: white
@@ -124,7 +124,7 @@ body
 			width: 100%
 			height: 100%
 
-/*-- Nosotros --*/
+//-- Nosotros --
 .nosotros
 	background: $back-colorO
 	color: white
@@ -157,7 +157,7 @@ body
 		a:hover
 			color:  $base-color
 
-/*-- Pie de página y formulario
+//-- Pie de página y formulario
 footer
 	background: $back-colorC
 	color: white
@@ -244,7 +244,7 @@ footer
 	p span
 		color:  $base-color
 
-/*-- Responsive --*/
+//-- Responsive --
 @media screen and (max-width: 780px)
 	.menu
 		display: none
