create slider gallery js vanilla

--- a/css/estilos.sass
+++ b/css/estilos.sass
@@ -6,6 +6,12 @@ $back-colorO: rgb(38, 41, 46)
 $back-colorC: rgb(47, 50, 56)
 $opacity: rgb(255, 255, 255)
 
+:root
+	--fColor: #b95356
+	--sColor: #26292e
+	--bgColor: #2f3238
+	--transition: all 0.2s ease-in-out
+
 *
 	margin: 0
 	padding: 0
@@ -34,47 +40,67 @@ body
 	position: relative
 	background: $back-colorC
 
-.logoSecundario
-	text-align: center
-	font-size: 3em
-	text-transform: uppercase
-	padding: 43vh 0
-	background: rgba($base-color, 0.2)
-	transition: ease-in-out 0.2s
+.container
+	width: 100%
+	height: 100vh
+	margin: auto
+	overflow-x: hidden
+	position: relative
 
-.slider
-	background: url("../assets/img/img5.jpg") black no-repeat fixed center
-	background-size: cover
+.slide
+	display: flex
+	width: 100%
+	height: 100%
+	img
+		width: 100%
+		height: auto
+		object-fit: cover
 
-.botonesSlider
+.content
+	position: absolute
+	z-index: 1
+	bottom: 0
+	width: 100%
+	cursor: default
+	background: var(--bgColor)
 	display: flex
 	flex-flow: row wrap
+	align-items: center
 	justify-content: space-between
-	align-content: center
 
-.botonesSlider
-	ul
-		display: flex
-		flex-flow: row wrap
-		justify-content: center
-		align-items: center
-		li
-			cursor: pointer
-			transition: ease-in-out 0.2s
-			i
-				font-size: 1em
-				padding: 10px 	
+.arrows
+	button
+		background: var(--sColor)
+		font-size: 1.4em
+		color: white
+		padding: 8px 10px
+		display: inline-flex
+		clear: both
+		cursor: pointer
+		transition: var(--transition)
+		&:hover
+			background: var(--fColor)
 
-.botonesSlider .btnIzqDer li, .botonesSlider .btnAbajo li
-	background: $back-colorO
-	font-size: 1.5em
+.corners
+	display: inline-flex
+	flex-flow: row wrap
+	align-items: center
+	margin-right: 10px
 
-.botonesSlider ul li:hover
-	background:  $base-color
-
-.botonesSlider .btnImgs li:hover
+.option
+	border-radius: 100%
+	height: 20px
+	width: 20px
+	margin: 5px
 	background: transparent
-	color:  $base-color
+	border: 2px solid var(--fColor)
+	cursor: pointer
+	transition: var(--transition)
+	&:hover
+		background: var(--fColor)
+
+.fill
+	background: var(--fColor)
 
 //-- Inicio --
 .inicio
@@ -97,14 +123,14 @@ body
 	text-transform: uppercase
 	padding: 10px
 
-.menu 
+.menu
 	a
 		color: white
 		text-transform: uppercase
 		padding: 15px
 		transition: ease-in-out 0.2s
 	a:hover
-		color:  $base-color
+		color: $base-color
 
 .menuMovil
 	display: none
@@ -155,7 +181,7 @@ body
 			margin-right: 20px
 			transition: ease-in-out 0.2s
 		a:hover
-			color:  $base-color
+			color: $base-color
 
 //-- Pie de página y formulario
 footer
@@ -197,7 +223,7 @@ footer
 		border-bottom: 2px solid transparent
 		transition: ease-in-out 0.2s
 	input:focus
-		border-bottom: 2px solid  $base-color
+		border-bottom: 2px solid	$base-color
 		color: white
 	input[type="submit"]
 		background: rgb(97, 103, 115)
@@ -209,7 +235,7 @@ footer
 		transition: ease-in-out 0.2s
 		border: none
 	input[type="submit"]:hover
-		background:  $base-color
+		background: $base-color
 	textarea
 		margin: 2px 0
 		padding: 15px
@@ -219,7 +245,7 @@ footer
 		border-bottom: 2px solid transparent
 		transition: ease-in-out 0.2s
 	textarea:focus
-		border-bottom: 2px solid  $base-color
+		border-bottom: 2px solid	$base-color
 		color: white
 
 .redesSociales
@@ -234,7 +260,7 @@ footer
 		margin: 10px
 		transition: ease-in-out 0.2s
 	.icono:hover
-		background:  $base-color
+		background: $base-color
 		color: white
 
 .contenidoPie
@@ -242,7 +268,7 @@ footer
 	padding: 30px 0
 	font-size: 1.2em
 	p span
-		color:  $base-color
+		color: $base-color
 
 //-- Responsive --
 @media screen and (max-width: 780px)
