--- a/css/estilos.sass
+++ b/css/estilos.sass
@@ -44,8 +44,19 @@ body
 	width: 100%
 	height: 100vh
 	margin: auto
-	overflow-x: hidden
+	overflow: hidden
 	position: relative
+	&::after
+		content: ""
+		position: absolute
+		width: 100%
+		height: 100%
+		background: rgba(52, 73, 94,0.4)
+		z-index: 1
+		left: 0
+		top: 0
+		bottom: 0
+		right: 0
 
 .slide
 	display: flex
@@ -58,7 +69,7 @@ body
 
 .content
 	position: absolute
-	z-index: 1
+	z-index: 10
 	bottom: 0
 	width: 100%
 	cursor: default
