create sub_files sass
Divide file estilos.sass in components

--- a/css/estilos.sass
+++ b/css/estilos.sass
@@ -33,305 +33,8 @@ body
 	>div
 		visibility: hidden
 
-//-- Slider --
-.diapositivas
-	width: 100%
-	color: white
-	position: relative
-	background: $back-colorC
-
-.container
-	width: 100%
-	height: 100vh
-	margin: auto
-	overflow: hidden
-	position: relative
-	&::after
-		content: ""
-		position: absolute
-		width: 100%
-		height: 100%
-		background: rgba(52, 73, 94,0.4)
-		z-index: 1
-		left: 0
-		top: 0
-		bottom: 0
-		right: 0
-
-.slide
-	display: flex
-	width: 100%
-	height: 100%
-	img
-		width: 100%
-		height: auto
-		object-fit: cover
-
-.content
-	position: absolute
-	z-index: 10
-	bottom: 0
-	width: 100%
-	cursor: default
-	background: var(--bgColor)
-	display: flex
-	flex-flow: row wrap
-	align-items: center
-	justify-content: space-between
-
-.arrows
-	button
-		background: var(--sColor)
-		font-size: 1.4em
-		color: white
-		padding: 8px 10px
-		display: inline-flex
-		clear: both
-		cursor: pointer
-		transition: var(--transition)
-		&:hover
-			background: var(--fColor)
-
-.corners
-	display: inline-flex
-	flex-flow: row wrap
-	align-items: center
-	margin-right: 10px
-
-.option
-	border-radius: 100%
-	height: 20px
-	width: 20px
-	margin: 5px
-	background: transparent
-	border: 2px solid var(--fColor)
-	cursor: pointer
-	transition: var(--transition)
-	&:hover
-		background: var(--fColor)
-
-.fill
-	background: var(--fColor)
-
-//-- Inicio --
-.inicio
-	background: $back-colorC
-	color: white
-	text-align: center
-	header
-		background: $back-colorO
-		color: white
-		display: flex
-		flex-flow: row wrap
-		justify-content: space-between
-		align-items: center
-
-.titulo
-	padding: 40px 0 20px 0
-
-.logo
-	font-size: 1.5em
-	text-transform: uppercase
-	padding: 10px
-
-.menu
-	a
-		color: white
-		text-transform: uppercase
-		padding: 15px
-		transition: ease-in-out 0.2s
-	a:hover
-		color: $base-color
-
-.menuMovil
-	display: none
-
-.galeria
-	width: 80%
-	padding: 40px 0
-	margin: 0 auto
-	display: flex
-	flex-flow: row wrap
-	justify-content: center
-	li
-		flex-basis: 30%
-		margin: 10px
-		border: 2px solid rgb(80, 82, 86)
-		img
-			width: 100%
-			height: 100%
-
-//-- Nosotros --
-.nosotros
-	background: $back-colorO
-	color: white
-	text-align: center
-
-.equipo
-	display: flex
-	flex-flow: row wrap
-	justify-content: space-between
-	width: 75%
-	margin: 0 auto
-	text-align: left
-	padding: 40px 0
-	li
-		flex-basis: 30%
-		margin: 10px
-		div
-			width: 100%
-			img
-				width: 100%
-		h3
-			margin: 10px 0
-		p
-			color: rgba($opacity, 0.3)
-			margin-bottom: 10px
-		a
-			color: rgba($opacity, 0.3)
-			margin-right: 20px
-			transition: ease-in-out 0.2s
-		a:hover
-			color: $base-color
-
-//-- Pie de página y formulario
-footer
-	background: $back-colorC
-	color: white
-	width: 100%
-	text-align: center
-
-.contenedorDatos
-	padding: 30px 0
-	width: 75%
-	margin: 0 auto
-	display: flex
-	flex-flow: row wrap
-	justify-content: center
-
-.titulo, .contenedorDatos p
-	flex-basis: 100%
-
-.datosEntrada
-	flex-basis: 70%
-
-.datosSalida
-	flex-basis: 30%
-	text-align: left
-	padding-left: 30px
-
-.datosLabCrea
-	color: rgba($opacity, 0.5)
-
-#formularioPrincipal
-	display: flex
-	flex-flow: column wrap
-	input
-		margin: 2px 0
-		padding: 15px
-		background: $back-colorO
-		font-size: 0.8em
-		border-bottom: 2px solid transparent
-		transition: ease-in-out 0.2s
-	input:focus
-		border-bottom: 2px solid	$base-color
-		color: white
-	input[type="submit"]
-		background: rgb(97, 103, 115)
-		color: white
-		font-size: 0.8em
-		width: 150px
-		margin-top: 40px
-		cursor: pointer
-		transition: ease-in-out 0.2s
-		border: none
-	input[type="submit"]:hover
-		background: $base-color
-	textarea
-		margin: 2px 0
-		padding: 15px
-		background: $back-colorO
-		font-size: 0.8em
-		height: 300px
-		border-bottom: 2px solid transparent
-		transition: ease-in-out 0.2s
-	textarea:focus
-		border-bottom: 2px solid	$base-color
-		color: white
-
-.redesSociales
-	margin: 15px 0
-	display: flex
-	flex-flow: row wrap
-	.icono
-		color: rgba($opacity, 0.5)
-		font-size: 2em
-		padding: 10px
-		background: $back-colorO
-		margin: 10px
-		transition: ease-in-out 0.2s
-	.icono:hover
-		background: $base-color
-		color: white
-
-.contenidoPie
-	background: $back-colorO
-	padding: 30px 0
-	font-size: 1.2em
-	p span
-		color: $base-color
-
-//-- Responsive --
-@media screen and (max-width: 780px)
-	.menu
-		display: none
-
-	.menuMovil
-		display: flex
-		flex-direction: column
-		padding: 15px
-		cursor: pointer
-		li
-			width: 30px
-			height: 3px
-			background: white
-			margin: 3px 0
-
-	.galeria
-		width: 95%
-		li
-			flex-basis: 45%
-
-	.equipo
-		width: 90%
-		li
-			flex-basis: 42%
-		li:last-child
-			flex-basis: 60%
-			margin: 0 auto
-
-	.contenedorDatos
-		width: 90%
-
-@media screen and (max-width: 520px)
-	.galeria li
-		flex-basis: 100%
-
-	.equipo li
-		flex-basis: 100% !important
-
-	.contenedorDatos
-		justify-content: space-between
-
-	.datosEntrada
-		flex-basis: 100%
-
-	.datosSalida
-		flex-basis: 30%
-		padding: 0
-		margin: 20px 0
-
-	.redesSociales
-		flex-basis: 45%
-		margin: 20px 0
-		justify-content: center
+@import sass/slider
+@import sass/header
+@import sass/team
+@import sass/footer
+@import sass/responsive
