--- a/css/sass/_slider.sass
+++ b/css/sass/_slider.sass
@@ -74,6 +74,5 @@
 	transition: var(--transition)
 	&:hover
 		background: var(--fColor)
-
-.fill
-	background: var(--fColor)
+	&.fill
+		background: var(--fColor)
