--- a/css/estilos.sass
+++ b/css/estilos.sass
@@ -25,6 +25,9 @@ $opacity: rgb(255, 255, 255)
 	font-family: 'Mi fuente'
 	src: url('../fonts/TitilliumText25L/TitilliumText25L003.otf') format("opentype")
 
+html
+	scroll-behavior: smooth
+
 body
 	font-family: 'Mi fuente', sans-serif
 	max-width: 1600px
