--- a/css/sass/_footer.sass
+++ b/css/sass/_footer.sass
@@ -1,9 +1,10 @@
 //-- Pie de página y formulario
-footer
+#contacto
 	background: $back-colorC
 	color: white
 	width: 100%
 	text-align: center
+	padding-top: 2rem
 
 .contenedorDatos
 	padding: 30px 0
