--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -1,18 +1,22 @@
 //-- Inicio --
-.inicio
+#portafolio
 	background: $back-colorC
 	color: white
 	text-align: center
-	header
-		background: $back-colorO
-		color: white
-		display: flex
-		flex-flow: row wrap
-		justify-content: space-between
-		align-items: center
+	padding: 5rem 0 3rem
+
+header
+	background: $back-colorO
+	color: white
+	display: flex
+	flex-flow: row wrap
+	justify-content: space-between
+	align-items: center
+	position: sticky
+	top: 0
 
 .titulo
-	padding: 40px 0 20px 0
+	margin-bottom: 20px
 
 .logo
 	font-size: 1.5em
