--- a/css/sass/_team.sass
+++ b/css/sass/_team.sass
@@ -1,8 +1,9 @@
 //-- Nosotros --
-.nosotros
+#nosotros
 	background: $back-colorO
 	color: white
 	text-align: center
+	padding: 4rem 0 2rem
 
 .equipo
 	display: flex
