--- a/css/estilos.css
+++ b/css/estilos.css
@@ -20,6 +20,10 @@
   font-family: "Mi fuente";
   src: url("../fonts/TitilliumText25L/TitilliumText25L003.otf") format("opentype");
 }
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Mi fuente", sans-serif;
   max-width: 1600px;
@@ -44,7 +48,12 @@ body > div {
   overflow: hidden;
   position: relative;
 }
-.container::after {
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+.swiper::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -56,100 +65,77 @@ body > div {
   bottom: 0;
   right: 0;
 }
-
-.slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  height: 100%;
-}
-.slide img {
+.swiper img {
   width: 100%;
   height: auto;
+  vertical-align: middle;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
-.content {
-  position: absolute;
-  z-index: 10;
-  bottom: 0;
-  width: 100%;
-  cursor: default;
-  background: var(--bgColor);
+.swiper .elements {
+  background: #2f3238;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 1000;
 }
-
-.arrows button {
+.swiper .elements .arrows {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.swiper .elements .swiper-prev, .swiper .elements .swiper-next, .swiper .elements .swiper-down {
   background: var(--sColor);
-  font-size: 1.4em;
+  font-size: 1.2em;
   color: white;
-  padding: 8px 10px;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  clear: both;
+  padding: 12px 14px;
   cursor: pointer;
   -webkit-transition: var(--transition);
   -o-transition: var(--transition);
   transition: var(--transition);
 }
-.arrows button:hover {
+.swiper .elements .swiper-prev:hover, .swiper .elements .swiper-next:hover, .swiper .elements .swiper-down:hover {
   background: var(--fColor);
 }
-
-.corners {
+.swiper .elements .swiper-pagination {
+  position: static;
+  bottom: inherit;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 10px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
-
-.option {
-  border-radius: 100%;
-  height: 20px;
-  width: 20px;
-  margin: 5px;
-  background: transparent;
-  border: 2px solid var(--fColor);
-  cursor: pointer;
-  -webkit-transition: var(--transition);
-  -o-transition: var(--transition);
-  transition: var(--transition);
+.swiper .elements .swiper-pagination .swiper-pagination-bullet {
+  min-width: 1rem;
+  min-height: 1rem;
 }
-.option:hover {
-  background: var(--fColor);
-}
-.option.fill {
+.swiper .elements .swiper-pagination .swiper-pagination-bullet-active {
   background: var(--fColor);
 }
 
-.inicio {
+#portafolio {
   background: #2f3238;
   color: white;
   text-align: center;
+  padding: 5rem 0 3rem;
 }
-.inicio header {
+
+header {
   background: #26292e;
   color: white;
   display: -webkit-box;
@@ -165,10 +151,13 @@ body > div {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 .titulo {
-  padding: 40px 0 20px 0;
+  margin-bottom: 20px;
 }
 
 .logo {
@@ -219,10 +208,11 @@ body > div {
   height: 100%;
 }
 
-.nosotros {
+#nosotros {
   background: #26292e;
   color: white;
   text-align: center;
+  padding: 4rem 0 2rem;
 }
 
 .equipo {
@@ -270,11 +260,12 @@ body > div {
   color: #b95356;
 }
 
-footer {
+#contacto {
   background: #2f3238;
   color: white;
   width: 100%;
   text-align: center;
+  padding-top: 2rem;
 }
 
 .contenedorDatos {
