--- a/css/sass/_slider.sass
+++ b/css/sass/_slider.sass
@@ -11,6 +11,10 @@
 	margin: auto
 	overflow: hidden
 	position: relative
+
+.swiper
+	width: 100%
+	height: 100%
 	&::after
 		content: ""
 		position: absolute
@@ -22,57 +26,40 @@
 		top: 0
 		bottom: 0
 		right: 0
-
-.slide
-	display: flex
-	width: 100%
-	height: 100%
 	img
 		width: 100%
 		height: auto
+		vertical-align: middle
 		object-fit: cover
-
-.content
-	position: absolute
-	z-index: 10
-	bottom: 0
-	width: 100%
-	cursor: default
-	background: var(--bgColor)
-	display: flex
-	flex-flow: row wrap
-	align-items: center
-	justify-content: space-between
-
-.arrows
-	button
-		background: var(--sColor)
-		font-size: 1.4em
-		color: white
-		padding: 8px 10px
-		display: inline-flex
-		clear: both
-		cursor: pointer
-		transition: var(--transition)
-		&:hover
-			background: var(--fColor)
-
-.corners
-	display: inline-flex
-	flex-flow: row wrap
-	align-items: center
-	margin-right: 10px
-
-.option
-	border-radius: 100%
-	height: 20px
-	width: 20px
-	margin: 5px
-	background: transparent
-	border: 2px solid var(--fColor)
-	cursor: pointer
-	transition: var(--transition)
-	&:hover
-		background: var(--fColor)
-	&.fill
-		background: var(--fColor)
+	.elements
+		background: $back-colorC
+		display: flex
+		align-items: center
+		justify-content: space-between
+		width: 100%
+		position: absolute
+		left: 0
+		bottom: 0
+		z-index: 1000
+		.arrows
+			display: flex
+		.swiper-prev, .swiper-next, .swiper-down
+			background: var(--sColor)
+			font-size: 1.2em
+			color: white
+			padding: 12px 14px
+			cursor: pointer
+			transition: var(--transition)
+			&:hover
+				background: var(--fColor)		
+		.swiper-pagination
+			position: static
+			bottom: inherit
+			display: inline-flex
+			align-items: center
+			justify-content: center
+			.swiper-pagination-bullet
+				min-width: 1rem
+				min-height: 1rem
+			.swiper-pagination-bullet-active
+				background: var(--fColor)
