--- a/css/estilos.css
+++ b/css/estilos.css
@@ -67,7 +67,7 @@ body > div {
 }
 .swiper img {
   width: 100%;
-  height: auto;
+  height: 100%;
   vertical-align: middle;
   -o-object-fit: cover;
      object-fit: cover;
